# web_shell

./: .gitignore
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  state.rs  ws_logic.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.mjs
frontend/src/: main.ts  style.css
frontend/src/api/: webSocketService.ts
frontend/src/services/: inputHandler.ts  terminalService.ts
frontend/src/utils/: constants.ts
