[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "json", "tracing"] }
futures-util = "0.3.31"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
